<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:text=""
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usa"
        android:textSize="24dp"
        android:textColor="#000000"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/canada"
        android:textSize="24dp"
        android:textColor="#000000"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/europa"
        android:textSize="24dp"
        android:textColor="#000000"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reino"
        android:textSize="24dp"
        android:textColor="#000000"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rusia"
        android:textSize="24dp"
        android:textColor="#000000"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"/>



</LinearLayout>